hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__emit_hugr_dfg@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal {} @_hl.main.1({} %0) {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca {}, align 8
  %"5_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  %"2_01" = load {}, {}* %"2_0", align 1
  store {} %"2_01", {}* %"5_0", align 1
  %"5_02" = load {}, {}* %"5_0", align 1
  store {} %"5_02", {}* %"4_0", align 1
  %"4_03" = load {}, {}* %"4_0", align 1
  store {} %"4_03", {}* %"0", align 1
  %"04" = load {}, {}* %"0", align 1
  ret {} %"04"
}
